bullet point rendering/adjustment for additional heading

--- a/app/styles/slides.sass
+++ b/app/styles/slides.sass
@@ -26,6 +26,13 @@ h1.large
 h1.normal
 	font-size: 100px
 
+.bullet ul
+	padding-left: 0
+
+.bullets li
+	text-align: left
+	line-height: 1.6em
+
 .image img
 	max-width: 100%
 	border: 1px solid #666
