slides.js file moved

--- a/app/styles/main.sass
+++ b/app/styles/main.sass
@@ -9,6 +9,7 @@ body, html
 body
 	text-align: center
 	color: #292929
+	font-family: 'Oswald', sans-serif
 	background: -moz-radial-gradient(center, circle closest-corner, #fff 0%, #ccc 100%)
 	background: -webkit-radial-gradient(center, circle closest-corner, #fff 0%, #ccc 100%)
 	background: radial-gradient(center, circle closest-corner, #fff 0%, #ccc 100%)
